feat: Add DTO classes for proxy, config, integration, and webhook requests; enhance MonitoringController with new endpoints